[package]
name = "tasmota-mqtt-client"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.70.0"

[dependencies]
rumqttc = { version = "0.23.0", features = ["use-rustls"] }
thiserror = "1.0.56"
tokio = { version = "1.35.1", features = ["rt-multi-thread", "sync"] }
tracing = "0.1.40"
async-stream = "0.3.5"
tokio-stream = { version = "0.1.14", features = ["sync"] }
dashmap = "5.5.3"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
bytes = "1.5.0"
hex = "0.4.3"
md-5 = "0.10.6"

[dev-dependencies]
clap = { version = "4.4.18", features = ["derive"] }
hex_fmt = "0.3.0"