[package]
name = "tasmota-mqtt-client"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.70.0"

[dependencies]
rumqttc = { version = "0.24.0", features = ["use-rustls"] }
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["sync"] }
tracing = "0.1.40"
async-stream = "0.3.5"
tokio-stream = { version = "0.1.15", features = ["sync"] }
dashmap = "6.0.1"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.118"
bytes = "1.6.0"
hex = "0.4.3"
md-5 = "0.10.6"

[dev-dependencies]
clap = { version = "4.4.18", features = ["derive"] }
tokio = { version = "1.38.0", features = ["rt-multi-thread", "macros"] }
hex_fmt = "0.3.0"
