[package]
name = "tasmota-mqtt-client"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.70.0"
description = "Rust library for interacting with tasmota devices over MQTT"
repository = "https://github.com/icewind1991/tasmota-mqtt-client"

[dependencies]
rumqttc = { version = "0.24.0", features = ["use-rustls"] }
thiserror = "1.0.65"
tokio = { version = "1.41.0", features = ["sync"] }
tracing = "0.1.40"
async-stream = "0.3.6"
tokio-stream = { version = "0.1.16", features = ["sync"] }
dashmap = "6.1.0"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
bytes = "1.8.0"
hex = "0.4.3"
md-5 = "0.10.6"

[dev-dependencies]
clap = { version = "3.2.25", features = ["derive"] }
tokio = { version = "1.41.0", features = ["rt-multi-thread", "macros"] }
hex_fmt = "0.3.0"
